--- a/wedding/config/locales/en.yml
+++ b/wedding/config/locales/en.yml
@@ -14,7 +14,7 @@
 #
 #     I18n.locale = :es
 #
-# This would use the information in config/locales/es.yml.
+# This would use the information in config/locales/fa.yml.
 #
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
